# awesome_wasm

./: Cargo.toml  Makefile  README.md  awesome-wasm.yaml
src/: lib.rs
