[package]
name = "awesome_wasm"
version = "0.1.0"
authors = ["suru"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
algos = "0.4.0"
log = '0.4.8'
serde = { version = "1.0.104", features = ["derive"]}
wascc-actor = "0.7"
wascc-codec = "0.7"

[profile.release]
opt-level = "s"